[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Shubham Agarwal <shubham.agarwal480@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
bandit = "^1.7.8"
safety = "^3.1.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
